--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 kaggle.json
-linkedin-AI4ALL-project\mappings
-linkedin-AI4ALL-project\companies
-linkedin-AI4ALL-project\jobs
+linkedin-AI4ALL-project\\mappings
+linkedin-AI4ALL-project\\companies
+linkedin-AI4ALL-project\\jobs
